- Modified simplestorage.html

--- a/DApp/SimpleStorage/simplestorage.html
+++ b/DApp/SimpleStorage/simplestorage.html
@@ -28,7 +28,7 @@
             <input id="newValue" type="text"> <button onclick="setValue()">Save to New Value</button>
             <div id="result"></div>
         </li>
-        <li>새 값을 저장한 후 팬딩 트랜잭션이 블록에 포함되면 자동으로 페이지가 업데이트될 것입니다.</li>
+        <li>The page will be updated automatically after new value is saved and transation is included into block.</li>
     </ul>
 
     Contract Source
@@ -38,7 +38,7 @@
     <a href="https://github.com/atomrigs/atomrigs.github.io/blob/master/simplestorage.html">https://github.com/atomrigs/atomrigs.github.io/blob/master/simplestorage.html</a>;
     <br><br>
     <p>
-        <a href="http://www.chaintalk.io/archive/lecture?sca=%EB%82%98%EB%8F%84+dApp+%EA%B0%9C%EB%B0%9C"><i>나도 dApp 개발해 보자 시리즈 by Atomrigs © 2017</i></a>
+        <a href="http://www.chaintalk.io/archive/lecture?sca=%EB%82%98%EB%8F%84+dApp+%EA%B0%9C%EB%B0%9C"><i>My dApp by Mstar © 2018</i></a>
     </p>
 </body>
 
