--- a/DApp/SimpleStorage/simplestorage.html
+++ b/DApp/SimpleStorage/simplestorage.html
@@ -32,13 +32,15 @@
     </ul>
 
     Contract Source
-    <script src="https://gist.github.com/atomrigs/7c633570496b79623bed5d1286f93f3a.js"></script>
+    <!-- <script src="https://gist.github.com/atomrigs/7c633570496b79623bed5d1286f93f3a.js"></script> -->
+    <script src="simplestorage.js"></script>
 
     HTML 소스<br>
-    <a href="https://github.com/atomrigs/atomrigs.github.io/blob/master/simplestorage.html">https://github.com/atomrigs/atomrigs.github.io/blob/master/simplestorage.html</a>;
+    <a href="https://github.com/Mstar7264/Mstar.github.io/blob/master/DApp/SimpleStorage/simplestorage.html">https://github.com/Mstar7264/Mstar.github.io/blob/master/DApp/SimpleStorage/simplestorage.html</a>;
     <br><br>
     <p>
-        <a href="http://www.chaintalk.io/archive/lecture?sca=%EB%82%98%EB%8F%84+dApp+%EA%B0%9C%EB%B0%9C"><i>My dApp by Mstar © 2018</i></a>
+        <!-- <a href="http://www.chaintalk.io/archive/lecture?sca=%EB%82%98%EB%8F%84+dApp+%EA%B0%9C%EB%B0%9C"><i>My dApp by Mstar © 2018</i></a> -->
+        <a href="#"><i>My dApp by Mstar © 2018</i></a>
     </p>
 </body>
 
@@ -46,8 +48,7 @@
 <!-- script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"></script -->
 <script>
     var contractAddress = "0x197b5c11999de4282fbd9ead7a5153f69af02756";
-    var abi = [{"constant":false,"inputs":[{"name":"x","type":"uint256"}],"name":"set","outputs":[],"payable":false,"stateMutability":"nonpayable","type":"function"},
-                {"constant":true,"inputs":[],"name":"get","outputs":[{"name":"","type":"uint256"}],"payable":false,"stateMutability":"view","type":"function"}];
+    var abi = [{"constant":false,"inputs":[{"name":"x","type":"uint256"}],"name":"set","outputs":[],"payable":false,"type":"function"},{"constant":true,"inputs":[],"name":"get","outputs":[{"name":"","type":"uint256"}],"payable":false,"type":"function"}];
     var simpleStorageContract;
     var simplestorage;
 
@@ -104,7 +105,7 @@
             getValue();
             web3.eth.getTransaction(txid, function(e,r){
                 if (r != null && r.blockNumber > 0) {
-                    document.getElementById('pending').innerHTML = '(기록된 블록: ' + r.blockNumber + ')';
+                    document.getElementById('pending').innerHTML = '(Saved Block: ' + r.blockNumber + ')';
                     document.getElementById('pending').style.cssText ='color:green;';
                     document.getElementById('storedData').style.cssText ='color:green; font-size:300%;';
                     filter.stopWatching();
