- Modified simplestorage.html

--- a/DApp/SimpleStorage/simplestorage.html
+++ b/DApp/SimpleStorage/simplestorage.html
@@ -34,7 +34,7 @@
     Contract Source
     <script src="simplestorage.js"></script>
 
-    HTML 소스<br>
+    HTML Source<br>
     <a href="https://github.com/Mstar7264/Mstar.github.io/blob/master/DApp/SimpleStorage/simplestorage.html">https://github.com/Mstar7264/Mstar.github.io/blob/master/DApp/SimpleStorage/simplestorage.html</a>;
     <br><br>
     <p>
